# jubilant-waffle

./: CLAUDE.md  LICENSE  README.md  TODO.md  pyproject.toml
.github/workflows/: tests.yml
src/transcribe/: __init__.py  __main__.py  audio.py  cli.py  formats.py  pipeline.py  speakers.py
tests/: test_audio.py  test_cli.py  test_formats.py  test_pipeline.py  test_speakers.py
