[project]
name = "transcribe"
version = "0.1.0"
description = "Speaker-diarized audio transcription (mp3/mp4/wav) via WhisperX."
readme = "README.md"
authors = [
    { name = "Claude", email = "noreply@anthropic.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.optional-dependencies]
run = ["whisperx>=3.4"]

[project.scripts]
transcribe = "transcribe.cli:main"

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"
