[project]
name = "transcribe"
version = "0.1.0"
description = "Speaker-diarized audio transcription (mp3/mp4/wav) via WhisperX."
readme = "README.md"
authors = [
    { name = "Claude", email = "noreply@anthropic.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.optional-dependencies]
run = ["whisperx>=3.4"]

[project.scripts]
transcribe = "transcribe.cli:main"

[dependency-groups]
dev = ["coverage>=7"]

[tool.coverage.run]
source = ["src/transcribe"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
precision = 1
exclude_also = [
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"
